--- a/weblog/blog/templates/blog/index.html
+++ b/weblog/blog/templates/blog/index.html
@@ -43,24 +43,22 @@
 <div class="container mt-4">
     <div class="row">
         
-        {% for post in posts %}
-            
-            
+        
+        
         <div class="col-9">
+            {% for post in posts %}
             <div class="card shadow-sm my-3">
                 <div class="card-body">
                     <h5 class="card-title"> {{ post.title}} </h5>
-                    <h6 class="card-subtitle mb-2 text-muted small py-2">2 Sep 2021</h6>
+                    <h6 class="card-subtitle mb-2 text-muted small py-2"> {{ post.date_created }} </h6>
                     <p class="card-text py-3">
-                        Some quick example text to build on the card title and make up the bulk of the card's content.
-                        Some quick example text to build on the card title and make up the bulk of the card's content.
-                        Some quick example text to build on the card title and make up the bulk of the card's content.
+                        {{ post.text }}
                     </p>
                     <div class="btn btn-sm btn-success">Read More</div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
 
         <div class="col-3">
 
