--- a/weblog/blog/templates/blog/post_detail.html
+++ b/weblog/blog/templates/blog/post_detail.html
@@ -23,6 +23,7 @@ Post Detail
             <div class="card shadow my-3 p-5">
                 <h3>Add new comment:</h3>
                 <form method="POST">
+                    {% csrf_token %}
                     <div class="form-group py-2">
                         <label class="py-1" for="author_name">Enter your name:</label>
                         <input type="text" class="form-control" placeholder="e.g. John Doe" name="author_name">
