--- a/weblog/templates/_base.html
+++ b/weblog/templates/_base.html
@@ -24,7 +24,8 @@
             <div class="navbar-nav">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                 <a class="nav-link" href="#">Blog</a>
-                <a class="nav-link" href="#">New Post</a>
+                <a class="nav-link" href="{% url 'new_post' %}">New Post</a>
+                <a class="nav-link" href="https://w3schools.com">W3Schools</a>
             </div>
         </div>
         <div class="mx-2 text-white">Welcome</div>
