--- a/weblog/templates/_base.html
+++ b/weblog/templates/_base.html
@@ -26,6 +26,8 @@
                 <a class="nav-link" href="#">Blog</a>
                 <a class="nav-link" href="{% url 'new_post' %}">New Post</a>
                 <a class="nav-link" href="https://w3schools.com">W3Schools</a>
+                <a class="nav-link" href="https://w3schools.com">varzesh3</a>
+                <a class="nav-link" href="https://w3schools.com">digikala</a>
             </div>
         </div>
         <div class="mx-2 text-white">Welcome</div>
