--- a/weblog/arad/templates/arad/index.html
+++ b/weblog/arad/templates/arad/index.html
@@ -1,1 +1,16 @@
-<img src ="https://i.redd.it/snoovatar/avatars/ba0e10cc-91e3-4652-8d6d-f025852dd7c7.png", alt="a"/>
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'arad/test.css' %}">
+
+</head>
+<body>
+    <img src ="{% static 'arad/test.jpg' %}", alt="alternate pic"/>
+</body>
+</html>
