--- a/weblog/templates/_base.html
+++ b/weblog/templates/_base.html
@@ -22,8 +22,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'blog' %}">Home</a>
+                <a class="nav-link" href="{% url 'blog' %}">Blog</a>
                 <a class="nav-link" href="{% url 'new_post' %}">New Post</a>
                 <a class="nav-link" href="https://w3schools.com">W3Schools</a>
                 <a class="nav-link" href="https://w3schools.com">varzesh3</a>
