--- a/weblog/mansoory/templates/mansoory/index.html
+++ b/weblog/mansoory/templates/mansoory/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MANSORY |</title>
-    <link rel="stylesheet" href="{% static 'mansoory/test.css' %}">
+    <link rel="stylesheet" href="{% static 'mansoory/sobhan.css' %}">
     <link rel="icon" type="image/x-icon" href="images/">
 </head>
 <body>
