--- a/weblog/blog/templates/blog/post_detail.html
+++ b/weblog/blog/templates/blog/post_detail.html
@@ -13,6 +13,10 @@ Post Detail
                 <h1>{{ post.title }}</h1>
                 <p class="small text-muted mt-2">By: {{ post.author }}</p>
                 <p class="mt-2">{{ post.text }}</p>
+                <div>
+                    <input type="button" class="btn btn-info" value="Edit">
+                    <input type="button" class="btn btn-danger" value="Delete">
+                </div>
             </div>
             
             <div class="card shadow my-3 p-5">
