--- a/weblog/blog/templates/blog/post_detail.html
+++ b/weblog/blog/templates/blog/post_detail.html
@@ -14,8 +14,8 @@ Post Detail
                 <p class="small text-muted mt-2">By: {{ post.author }}</p>
                 <p class="mt-2">{{ post.text }}</p>
                 <div>
-                    <input type="button" class="btn btn-info" value="Edit">
-                    <input type="button" class="btn btn-danger" value="Delete">
+                    <a href="/blog/{{post.id}}/update" class="btn btn-info">Edit</a>
+                    <a href="/blog/{{post.id}}/delete" class="btn btn-danger">Delete</a>
                 </div>
             </div>
             
