--- a/weblog/blog/templates/blog/index.html
+++ b/weblog/blog/templates/blog/index.html
@@ -31,7 +31,7 @@ Posts
                     <div class="card-body">
                         <p class="card-text">We love python and django. So we created a blog site to share our
                             thoughts</p>
-                        <a href="#"
+                        <a href="{% url 'more' %}"
                            class="btn btn-sm btn-danger">
                             More...
                         </a>
