--- a/weblog/blog/templates/blog/post_detail.html
+++ b/weblog/blog/templates/blog/post_detail.html
@@ -21,7 +21,7 @@ Post Detail
             
             <div class="card shadow my-3 p-5">
                 <h3>Comments:</h3>
-                No comments yet! Be the first one.
+                salam
             </div>
             
             <div class="card shadow my-3 p-5">
